--- a/pub/System/TasksAPIPlugin/src/scss/_tasks.scss
+++ b/pub/System/TasksAPIPlugin/src/scss/_tasks.scss
@@ -99,6 +99,7 @@
 
   > .btn-expander {
     @include flex($shrink: 0, $align: stretch);
+    align-self: center;
 
     background-color: transparent;
     border-radius: $global-radius;
@@ -108,14 +109,12 @@
     background-image: url('../assets/add.png');
     cursor: pointer;
 
-    margin-right: 3px;
-    margin-left: -3px;
     opacity: 0;
     pointer-events: none;
     transition: background-color 0.3s ease-in-out,
                 opacity 0.3s ease-in-out;
     width: 32px;
-    max-height: 50px;
+    height: 32px;
 
     &:hover {
       background-color: $light-blue;
@@ -130,22 +129,22 @@
 
   > .btn-edit {
     @include flex($shrink: 0, $align: stretch);
+    align-self: center;
 
     background-color: transparent;
     border-radius: $global-radius;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: 16px;
+    background-size: 12px;
     background-image: url('../assets/edit-blue.png');
     cursor: pointer;
 
-    margin-left: 6px;
     opacity: 0;
     pointer-events: none;
     transition: background-color 0.3s ease-in-out,
                 opacity 0.3s ease-in-out;
     width: 32px;
-    max-height: 50px;
+    height: 32px;
 
     &:hover {
       background-color: $light-blue;
@@ -159,7 +158,7 @@
 }
 
 .task-content {
-  @include flex-container($wrap: wrap, $justify: space-between);
+  @include flex-container($justify: space-between);
   @include flex($grow: 2, $align: center);
   align-items: center;
   transition: background-color .3s ease-in-out;
@@ -177,7 +176,7 @@
   > div {
     @include flex($grow: 1, $basis: 0);
     font-size: 13px;
-    padding: 3px;
+    // padding: 3px;
 
     span {
       display: block;
@@ -224,9 +223,6 @@
       height: auto;
       opacity: 1;
       transition: opacity .3s ease-in-out;
-      min-width: 25%;
-      max-width: 50%;
-      width: 50%;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
@@ -279,6 +275,10 @@
 
 .task.expanded .task-content {
   border-radius: 6px;
+}
+
+.task.closed > .task-wrapper > .task-content {
+  text-decoration: line-through;
 }
 
 .task-children {
